updated media querys

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
         <h1>Lawn Care Service</h1>
         <p>Your lawn care experts</p>
-      </header>
+    </header>
       <main>
         <section id="services">
           <h2>Our Services</h2>
@@ -81,8 +81,9 @@
         </div>
         </section>
       </main
-     <footer id="footer">
-      <p>&copy; 2023 Lawn Care Service</p>
+    <footer>
+      div.
+      <p>&copy;Joe Pro Lawn Care</p>
     </footer>
   </body>
 </html>
